kubefiles/deploy-introduction/sample-node-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-server
  template:
    metadata:
      labels:
        app: node-server
    spec:
      containers:
        - name: node-server
          image: image-registry.openshift-image-registry.svc:5000/deploy-introduction/node-server:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: node-server
spec:
  selector:
    app: node-server
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: node-server
spec:
  port:
    targetPort: 4000
  to:
    kind: Service
    name: node-server
